Updated profile icon, added blur background to navbar; -> fix min side nav alignment, add projects

--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,14 @@ body {
 
 /* Top Nav Bar CSS Styling */
 nav{
-   opacity: 75%;
-   
-   top: 0;
-   width: 100%;
-   position: fixed;
-   z-index: 9999;
+    opacity: 75%;
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(8px) saturate(180%);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    top: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 9999;
    
   
 }
